Add Hot Module Replacement config.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 body {
-  background-color: pink;
-
-  p {
-    color: red;
-  }
+    background-color: pink;
+    h1,
+    p {
+        color: green;
+    }
 }
