--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,9 @@
 body {
     background-color: pink;
-    h1,
+    background: url('./images/html5.png') center no-repeat;
+
+    h1, 
     p {
-        color: blue;
+        color: black;
     }
 }
